--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table>
-		<caption>Student details</caption>
+		<caption>Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
